--- a/angular.json
+++ b/angular.json
@@ -42,9 +42,7 @@
             "outputPath": "dist/lastboard-app",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": [],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
